# utah

./: .travis.yml  Cargo.toml  LICENSE  README.md  dummy.rs  travis.yml
src/: aggregate.rs  dataframe.rs  error.rs  from.rs  helper.rs  impute.rs  join.rs  lib.rs  main.rs  mixedtypes.rs  mod.rs  prelude.rs  process.rs  read.rs  slower_dataframe.rs  specialization.rs  test_main.rs  tests.rs  traits.rs  transform.rs  types.rs
src/adapters/: aggregate.rs  join.rs  mod.rs  process.rs  transform.rs
src/bench/: bench_creation.rs  bench_sum.rs  mod.rs
src/combinators/: aggregate.rs  interact.rs  mod.rs  process.rs  transform.rs
src/experiments/: generic_dataframe.rs  generic_hashmap.rs  mixed_dataframe_experimentation.rs  specialization.rs
src/implement/: impl_constructor_generic.rs  impl_empty.rs  impl_ops_f64_string.rs  impl_ops_generic.rs  mod.rs
src/tests/: mod.rs  test.csv  tests.rs
src/util/: error.rs  from.rs  macros.rs  mod.rs  read.rs  readCSV.rs  readcsv.rs  traits.rs  types.rs
