[package]
name = "utah"
version = "0.1.0"
authors = ["pegasos1"]
description = "dataframe structure and operations"
documentation = "http://docs.rs/utah"
respository = "http://github.com/pegasos1/utah"
license = "MIT"

[dependencies]
ndarray = "*"
ndarray-rand="*"
rand="*"
num = "*"
error-chain="*"
itertools = "*"
csv = "*"
rustc-serialize = "*"

[lib]
path='src/lib.rs'
